examples/errors/parsing/sort-star-no-next.cn
fun f : (Int * ) -> Int [pure] = {
  p -> 0
}

main : () [impure] = ()
